--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -84,7 +84,7 @@
 	           	That's why we create the subnavigation ourself and add it on the correct position by Javascript.
 	           	Copy and paste a <ul> and give the correct data-position number. The number corresponds with the position of the list-item in the API-list.
 	           	
-	           	Example: Groups api is the first item, so data-position="1" 	
+	           	Example: Lights api is the first item, so data-position="1" 	
 	            	
 	           -->
 		
