text changes + added legal page + other resources in navigation

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -141,8 +141,15 @@
 	            <ul data-role="sub-nav" data-position="5">
 	          		<li><a href="/5_portalapi.html#51_discover_local_bridges">Discover local bridges</a></li> 
 	          	</ul>            
+	          	<li class="divider"></li>
 	          </ul>
-	
+
+						<ul class="nav nav-list">
+	            <li class="nav-header">Other resources</li>
+	            <li><a href="https://github.com/PhilipsHue/PhilipsHueSDK-iOS" target="_blank">iOS SDK</a></li>
+	            <li><a href="http://www.everyhue.com/?page_id=38" target="_blank">Developers forum</a></li>
+	          </ul>
+
 	        </div>
 	        
 	        <div class="span9 hue-main-content" data-role="main-content">
@@ -169,6 +176,7 @@
 			</footer>
     
     </div>    
+
 
     {% include JB/analytics %}
     <script type="text/javascript" src="assets/themes/twitter/js/jquery-1.8.3.min.js"></script>
