Android SDK link added

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -147,6 +147,8 @@
 						<ul class="nav nav-list">
 	            <li class="nav-header">Other resources</li>
 	            <li><a href="https://github.com/PhilipsHue/PhilipsHueSDKiOS" target="_blank">iOS SDK</a></li>
+                          	            <li><a href="https://github.com/PhilipsHue/PhilipsHueSDKAndroid" target="_blank">Android SDK</a></li>
+
 	            <li><a href="http://www.everyhue.com/?page_id=38" target="_blank">Developers forum</a></li>
 	            <li><a href="http://stackoverflow.com/questions/tagged/philips-hue" target="_blank">Stack Overflow tag</a></li>
 	            <li><a href="https://github.com/Q42/hue-libs" target="_blank">3rd party libraries</a></li>
