New links to the 1.1.1 beta of the iOS/OSX SDK and the Java Multiplatform and Android SDK

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -146,8 +146,8 @@
 
 						<ul class="nav nav-list">
 	            <li class="nav-header">Other resources</li>
-	            <li><a href="https://github.com/PhilipsHue/PhilipsHueSDKiOS" target="_blank">iOS SDK</a></li>
-                          	            <li><a href="https://github.com/PhilipsHue/PhilipsHueSDKAndroid" target="_blank">Android SDK</a></li>
+	            <li><a href="http://developers.meethue.com/PhilipsHueSDK-iOS-OSX/" target="_blank">iOS SDK 1.1.1 beta</a></li>
+                          	            <li><a href="http://developers.meethue.com/PhilipsHueSDK-Java-MultiPlatform-Android" target="_blank">Android SDK 1.1.1 beta</a></li>
 
 	            <li><a href="http://www.everyhue.com/?page_id=38" target="_blank">Developers forum</a></li>
 	            <li><a href="http://stackoverflow.com/questions/tagged/philips-hue" target="_blank">Stack Overflow tag</a></li>
