updated links to the new marketing & sales site at http://meethue.com updated links to images to be hosted on github pages as they have been removed from www.meethue.com

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -35,19 +35,19 @@
 	    <header class="site-header">                 
 	    	<nav class="hue-philips-header">
           <a href="http://www.philips.com" class="philips-logo">
-            <img src="http://www.meethue.com/public/images/logos/philips-blue.png" alt="Philips">
+            <img src="/assets/philips-blue.png" alt="Philips">
           </a>                       
         </nav>          
 	            
         <nav class="hue-header hue-stripes">
             
           <a href="http://www.meethue.com" class="header-logo">
-            <img src="http://www.meethue.com/public/images/logos/hue-logo.png" alt="Hue Personal Wireless Lighting">
+            <img src="/assets/hue-logo.png" alt="Hue Personal Wireless Lighting">
           </a>        
 
           <h1 class="hue-page-title"><a class="brand" href="{{ HOME_PATH }}">Philips hue API</a></h1>
           
-          <img class="hue-color-line-header" src="http://www.meethue.com/public/images/bg/hue-color-line.png">
+          <img class="hue-color-line-header" src="/assets/hue-color-line.png">
     
         </nav>
 		 </header>
@@ -170,7 +170,7 @@
 	    
 	    <footer class="site-footer hue-stripes">
 	        
-	    	<img class="hue-color-line-footer" src="http://www.meethue.com/public/images/bg/hue-color-line.png">
+	    	<img class="hue-color-line-footer" src="/assets/hue-color-line.png">
 	 
 		    <p>
 		        © 2004-2013 Koninklijke Philips Electronics N.V. with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
